src/expr-derive-impl/src/snapshots/mz_expr_derive_impl__test__unary_fn.snap
---
source: src/expr-derive-impl/src/lib.rs
expression: "#[sqlfunc(test = true)]\nfn unary_fn<'a>(a: Datum<'a>) -> bool {\n    unimplemented!()\n}\n"
---
#[derive(
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
)]
#[cfg_attr(any(test, feature = "proptest"), derive(proptest_derive::Arbitrary))]
pub struct UnaryFn;
impl crate::func::EagerUnaryFunc for UnaryFn {
    type Input<'a> = Datum<'a>;
    type Output<'a> = bool;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        unary_fn(a)
    }
    fn output_sql_type(
        &self,
        input_type: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for UnaryFn {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(unary_fn))
    }
}
impl crate::func::FuncName for UnaryFn {
    const NAME: &'static str = stringify!(unary_fn);
    #[cfg(feature = "func-registry")]
    const SQLFUNC: Option<crate::func::SqlFuncSource> = Some(crate::func::SqlFuncSource {
        decl: "#[sqlfunc(test = true)] fn unary_fn<'a>(a: Datum<'a>) -> bool",
        signature: "fn(Datum<'a>) -> bool",
        body_fingerprint: 4726381389472009124u64,
    });
    #[cfg(feature = "func-registry")]
    fn sqlfunc_input_types() -> Option<Vec<mz_repr::SqlColumnType>> {
        use crate::func::registry::{ProbeColumnType as _, ProbeColumnTypeFallback as _};
        [
            (&crate::func::registry::ColumnTypeProbe::<
                Datum<'static>,
            >(::std::marker::PhantomData))
                .column_type(),
        ]
            .into_iter()
            .collect()
    }
}
fn unary_fn<'a>(a: Datum<'a>) -> bool {
    unimplemented!()
}
