src/expr-derive-impl/src/snapshots/mz_expr_derive_impl__test__unary_generic_range.snap
---
source: src/expr-derive-impl/src/lib.rs
expression: "#[sqlfunc(sqlname = \"rangelower\", is_monotone = true)]\nfn range_lower<'a, T>(a: Range<T>) -> Option<T> {\n    a.inner.map(|inner| inner.lower.bound).flatten()\n}\n"
---
#[derive(
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
)]
#[cfg_attr(any(test, feature = "proptest"), derive(proptest_derive::Arbitrary))]
pub struct RangeLower;
impl crate::func::EagerUnaryFunc for RangeLower {
    type Input<'a> = Range<Datum<'a>>;
    type Output<'a> = Option<Datum<'a>>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        range_lower(a)
    }
    fn output_sql_type(
        &self,
        input_type: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = {
            <Range<
                Datum<'_>,
            > as mz_repr::SqlContainerType>::unwrap_element_type(&input_type.scalar_type)
                .clone()
                .nullable(true)
        };
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn introduces_nulls(&self) -> bool {
        true
    }
    fn is_monotone(&self) -> bool {
        true
    }
}
impl std::fmt::Display for RangeLower {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("rangelower")
    }
}
impl crate::func::FuncName for RangeLower {
    const NAME: &'static str = stringify!(range_lower);
    const SQLFUNC: Option<crate::func::SqlFuncSource> = Some(crate::func::SqlFuncSource {
        decl: "#[sqlfunc(sqlname = \"rangelower\", is_monotone = true,)] fn range_lower<'a, T>(a: Range<T>) -> Option<T>",
        signature: "fn(Range<T>) -> Option<T>",
        body_fingerprint: 17676087085653280109u64,
    });
    fn sqlfunc_input_types() -> Option<Vec<mz_repr::SqlColumnType>> {
        use crate::func::registry::{ProbeColumnType as _, ProbeColumnTypeFallback as _};
        [
            (&crate::func::registry::ColumnTypeProbe::<
                Range<Datum<'static>>,
            >(::std::marker::PhantomData))
                .column_type(),
        ]
            .into_iter()
            .collect()
    }
}
fn range_lower<'a, T>(a: Range<T>) -> Option<T> {
    a.inner.map(|inner| inner.lower.bound).flatten()
}
