src/expr-derive-impl/src/snapshots/mz_expr_derive_impl__test__unary_self.snap
---
source: src/expr-derive-impl/src/lib.rs
expression: "#[sqlfunc(PadTo, sqlname = \"pad_to\", test = true)]\nfn pad_to<'a>(&self, a: &'a str, temp_storage: &'a RowArena) -> &'a str {\n    temp_storage.push_string(format!(\"{a:width$}\", width = self.width))\n}\n"
---
impl PadTo {
    fn pad_to<'a>(&self, a: &'a str, temp_storage: &'a RowArena) -> &'a str {
        temp_storage.push_string(format!("{a:width$}", width = self.width))
    }
}
impl crate::func::EagerUnaryFunc for PadTo {
    type Input<'a> = &'a str;
    type Output<'a> = &'a str;
    fn call<'a>(
        &self,
        a: Self::Input<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        self.pad_to(a, temp_storage)
    }
    fn output_sql_type(
        &self,
        input_type: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for PadTo {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("pad_to")
    }
}
impl crate::func::FuncName for PadTo {
    const NAME: &'static str = stringify!(pad_to);
    #[cfg(feature = "func-registry")]
    const SQLFUNC: Option<crate::func::SqlFuncSource> = Some(crate::func::SqlFuncSource {
        decl: "#[sqlfunc(PadTo, sqlname = \"pad_to\", test = true)] fn pad_to<'a>(&self, a: &'a str, temp_storage: &'a RowArena) -> &'a str",
        signature: "fn(&'a str) -> &'a str",
        body_fingerprint: 9097626259777403017u64,
    });
    #[cfg(feature = "func-registry")]
    fn sqlfunc_input_types() -> Option<Vec<mz_repr::SqlColumnType>> {
        use crate::func::registry::{ProbeColumnType as _, ProbeColumnTypeFallback as _};
        [
            (&crate::func::registry::ColumnTypeProbe::<
                &'static str,
            >(::std::marker::PhantomData))
                .column_type(),
        ]
            .into_iter()
            .collect()
    }
}
