src/expr-derive-impl/src/snapshots/mz_expr_derive_impl__test__variadic_modifiers.snap
---
source: src/expr-derive-impl/src/lib.rs
expression: "#[sqlfunc(Greatest, sqlname = \"greatest\", could_error = false, is_monotone = true)]\nfn greatest<'a>(datums: Variadic<Datum<'a>>) -> Datum<'a> {\n    datums.into_iter().max().unwrap_or(Datum::Null)\n}\n"
---
#[derive(
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
)]
#[cfg_attr(any(test, feature = "proptest"), derive(proptest_derive::Arbitrary))]
pub struct Greatest;
impl crate::func::variadic::EagerVariadicFunc for Greatest {
    type Input<'a> = Variadic<Datum<'a>>;
    type Output<'a> = Datum<'a>;
    fn call<'a>(
        &self,
        datums: Self::Input<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        greatest(datums)
    }
    fn output_type(
        &self,
        input_types: &[mz_repr::SqlColumnType],
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::variadic::EagerVariadicFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        let non_nullable_input_is_nullable = false;
        let inputs_nullable = input_types.iter().any(|it| it.nullable);
        output
            .nullable(
                nullable || non_nullable_input_is_nullable
                    || (propagates_nulls && inputs_nullable),
            )
    }
    fn could_error(&self) -> bool {
        false
    }
    fn is_monotone(&self) -> bool {
        true
    }
}
impl std::fmt::Display for Greatest {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("greatest")
    }
}
impl crate::func::FuncName for Greatest {
    const NAME: &'static str = stringify!(greatest);
    const SQLFUNC: Option<crate::func::SqlFuncSource> = Some(crate::func::SqlFuncSource {
        decl: "#[sqlfunc(Greatest, sqlname = \"greatest\", could_error = false, is_monotone = true,)] fn greatest<'a>(datums: Variadic<Datum<'a>>) -> Datum<'a>",
        body_fingerprint: 12432331865766881162u64,
    });
}
fn greatest<'a>(datums: Variadic<Datum<'a>>) -> Datum<'a> {
    datums.into_iter().max().unwrap_or(Datum::Null)
}
